[package]
name = "logging-tests"
version = "0.1.0"
authors = ["Austin Tasato <aytasato@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simplelog = "0.7.4"
log = "0.4.8"
log4rs = "0.8.3"
fern = { version = "0.5.8", features = ["colored"] }
chrono = "0.4.9"
